tests/ui/empty_input.rs
use crement::crement;

fn main() {
    // crement!() with no argument must produce a helpful compile error.
    let _ = crement!();
}
